
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Added 'relativeUrl' parameter to MODx.Browser file data
- [#MODX-1674] Fixes and stabilization to MODx.Browser, specifically when used by RTEs
- Changing default editor from TinyMCE to blank value
- Fixed bug in setup where inplace setting was being forced to 1
- Cleaned up most processors, fixed wrong permission references, standardized code
- Fixed welcome panel to only show panels with permission to see
- Fixed error log view page to restrict viewing and clearing by permission
- Added descriptive information to Roles grid
- Lots of permissions fixes, other bugfixes and sanity checks to Element processors/controllers
- Added propertyset permissions
- Cleanups to Resource controllers, processors, optimizing of security permission checks
- Fixed various bugs with search page
- Fixed bug with adding policies that prevented partial regexp matches in name
- Fixed bugs when adding new policies or permissions that showed prior added perm/policy in form
- Properly secured and refactored recently edited resources grid
- [#MODX-1670] Adjusted permissions to allow restricted user to edit profile
- [#MODX-1667] Removed unnecessary opacity CSS rule in menus
- Fixed bug where page wasnt reloading on login in certain situations
- Make rightlogin div longer to support longer translations
- [#MODX-1653] Fixed issues with related objects, removal of aggregates, and other packaging bugs. Introduced xPDOTransport::UNINSTALL_OBJECT, which defaults to true. When off, it will prevent an object from being uninstalled. 
- Updated xPDO to r413
- [#MODX-761] Fixed language issue in setup, now sets it correctly and loads proper lexicon for login screen